# pico-rectangle

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
.github/: FUNDING.yml  cmake-firmware.yml
.github/workflows/: cmake-firmware.yml  main.yml
include/: comms.h  comms.hpp  global.hpp  inputs.hpp  logging.hpp  logic.h  logic.hpp
include/communication_protocols/: joybus.hpp  usb.hpp
include/communication_protocols/joybus/: gcReport.hpp
include/communication_protocols/usb/: common.hpp  xinput.hpp
include/dac_algorithms/: NASB_Austin.hpp  melee_F1.hpp  project_plus_F1.hpp  set_of_8_keys.hpp  ultimate_F1.hpp  wired_fight_pad_pro_default.hpp  wired_fight_pad_pro_mast.hpp  xbox_360.hpp
include/dac_algorithms/analog_values/: melee_values.hpp
include/gpio_to_button_sets/: F1.hpp  Mast.hpp  NASB_Austin.hpp
include/other/: nunchuk.hpp  runtime_remapping_mode.hpp
include/persistence/: functions.hpp  page_indexes.hpp
include/persistence/pages/: runtime_remapping.hpp
include/ssd1306/: 12x16_font.h  5x8_font.h  FrameBuffer.h  TextRenderer.h  ssd1306.h
include/ui/: ui.h
include/ui/ssd1306/: 16x32_font.h  8x8_font.h  TextRenderer.h  ssd1306.h
include/usb/: common.h  logic.h  logic.hpp  lowlevel.h  lowlevel.hpp
include/usb_configurations/: gcc_to_usb_adapter.hpp  hid_with_triggers.hpp  keyboard_8kro.hpp  wired_fight_pad_pro.hpp  xbox_360.hpp
pio/: my_pio.pio
src/: comms.c  comms.cpp  inputs.cpp  logging.cpp  logic.c  logic.cpp  main.c  main.cpp
src/communication_protocols/: joybus.cpp  usb.cpp
src/dac_algorithms/: NASB_Austin.cpp  melee_F1.cpp  project_plus_F1.cpp  set_of_8_keys.cpp  ultimate_F1.cpp  wired_fight_pad_pro_default.cpp  wired_fight_pad_pro_mast.cpp  xbox_360.cpp
src/gpio_to_button_sets/: F1.cpp  Mast.cpp  NASB_Austin.cpp
src/other/: nunchuk.cpp  runtime_remapping_mode.cpp
src/ssd1306/: FrameBuffer.cpp  TextRenderer.cpp  ssd1306.cpp
src/ui/: ui.cpp
src/ui/ssd1306/: FrameBuffer.cpp  TextRenderer.cpp  ssd1306.cpp
src/usb/: logic.cpp  lowlevel.c
src/usb_configurations/: gcc_to_usb_adapter.cpp  hid_with_triggers.cpp  keyboard_8kro.cpp  wired_fight_pad_pro.cpp  xbox_360.cpp
